<package>
   <name>ompl_multiset</name>
   <version>0.0.0</version>
   <description>
      Multi-Set PRM planner for OMPL
   </description>
   <maintainer email="cdellin@gmail.com">Chris Dellin</maintainer>
   <license>None</license>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>ompl</build_depend>
   <run_depend>ompl</run_depend>
</package>
