<package>
   
   <name>or_multiset</name>
   <version>0.0.1</version>
   <description>
      Multi-Set PRM planner for OpenRAVE
   </description>
   
   <author email="cdellin@gmail.com">Chris Dellin</author>
   <maintainer email="cdellin@gmail.com">Chris Dellin</maintainer>
   <license>BSD</license>
   
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>ompl</build_depend>
   <build_depend>pr_bgl</build_depend>
   <build_depend>ompl_multiset</build_depend>
   <build_depend>openrave</build_depend>
   <run_depend>ompl</run_depend>
   <run_depend>pr_bgl</run_depend>
   <run_depend>ompl_multiset</run_depend>
   <run_depend>openrave</run_depend>
   
</package>
