<package>
   
   <name>pr_bgl</name>
   <version>0.0.1</version>
   <description>
      Implementations of graph algorithms for the Boost Graph Library
   </description>
   
   <author email="cdellin@gmail.com">Chris Dellin</author>
   <maintainer email="cdellin@gmail.com">Chris Dellin</maintainer>
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>boost</build_depend>
   
</package>
