<package>
   
   <name>test_lemur</name>
   <version>0.0.1</version>
   <description>
      Multi-Set PRM planner tests
   </description>
   
   <author email="cdellin@gmail.com">Chris Dellin</author>
   <maintainer email="cdellin@gmail.com">Chris Dellin</maintainer>
   <license>BSD</license>
   
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>ompl</build_depend>
   <build_depend>ompl_lemur</build_depend>
   <build_depend>openrave</build_depend>
   <run_depend>ompl</run_depend>
   <run_depend>ompl_lemur</run_depend>
   <run_depend>openrave</run_depend>
   
</package>
