<package>
   
   <name>test_multiset</name>
   <version>0.0.1</version>
   
   <description>
      Multi-Set PRM planner tests
   </description>
   
   <maintainer email="cdellin@gmail.com">Chris Dellin</maintainer>
   
   <license>None</license>
   
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>ompl</build_depend>
   <build_depend>ompl_multiset</build_depend>
   <build_depend>openrave</build_depend>
   <run_depend>ompl</run_depend>
   <run_depend>ompl_multiset</run_depend>
   <run_depend>openrave</run_depend>
   
</package>
